Fix gap between login buttons on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -139,7 +139,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    gap: 5px;
 }
 
 .avatar-inline {
@@ -272,6 +271,7 @@
         align-items: center;
         margin-bottom: 5px;
         padding: 0;
+        gap: 2px;
     }
 
     .directory-button,
